- start snapshot revision 7.1.0 - fix: https://github.com/padreati/rapaio/issues/264